--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>MRK</title>
     <link href="style.css" rel="stylesheet">
     <script src="js.js" type="text/javascript"></script>
+    <script src="js2.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body onload="first_and_last_step()">
     <div class="gamepole">
     <div class="plinfo">
+        <div class="step">Шаг <div id="step_nom">0</div></div>
         <div class="Button_NG" id="Button_NG" onclick="location.reload(); return false;" hidden>
             Новая игра
         </div>
@@ -30,6 +33,8 @@
         <div class="plname">Игрок</div>
         <div id="pl_stats">Статы</div>
         <div id="pl_info"></div>
+        <div id="pl_info_battle_monstr"></div>
+        <div id="pl_info_battle"></div>
         
     </div>
     <div class="plinfo">
@@ -161,6 +166,8 @@
         <div class="plname">Компьютер</div>
         <div id="pc_stats">Статы</div>
         <div id="pc_info"></div>
+        <div id="pc_info_battle_monstr"></div>
+        <div id="pc_info_battle"></div>
     </div>
 
 
